# roleplay-studio-app

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  README.ru.md  alembic.ini  backend.spec  docker-compose.test.yml  docker-compose.yml  pyproject.toml  roleplay-backend.spec
.githooks/: pre-commit
alembic/: env.py
alembic/versions/: 2a4ae02ae5b1_add_generation_status_to_conversations.py  476d595fed77_add_mes_example_to_bots.py  9c8f2a1b3d4e_add_reasoning_to_conversations.py  a1b2c3d4e5f6_add_bot_versions_table.py  a7c3f8e1d2b4_add_global_skills_table.py  c2e06d1365f2_baseline_schema.py  d1e7c4a0f9b2_add_app_settings_singleton.py  e5f6a7b8c9d0_add_floating_prompts_and_state.py  eefcb2c7bfa1_add_parent_thread_id_to_chat_threads.py  f1e2d3c4b5a6_add_dynamic_system_prompt_to_conversations.py
api/: bot_loader.py  bots_registry.py  constants.py  deps.py  main.py  schemas.py  upload_utils.py
api/routes/: bots.py  chat.py  config.py  files.py  knowledge.py  personas.py  server_info.py  setup.py  skills.py  threads.py  tts.py
app/: __init__.py  bootstrap.py  print_qr.py
app/application/: __init__.py  container.py  dto.py  exceptions.py  ports.py  services.py
app/application/services/: __init__.py  bot.py  bot_import.py  bot_version.py  chat.py  file_parser.py  knowledge.py  message_summarizer.py  persona.py  settings.py  skill.py  summary.py  text_chunker.py  thread.py  tts.py  upload.py
app/domain/: constants.py  entities.py  enums.py  exceptions.py
app/infrastructure/: character_card_extras.py  config.py  embedding_validation.py  embeddings.py  format_standart_rp_repairer.py  image_utils.py  llm.py  llm_mock.py  logging.py  rag.py  reindex.py  tts.py  vectorstore.py
app/infrastructure/db/: models.py
app/infrastructure/llm/: __init__.py  base_anthropic.py  base_openai.py  factory.py
app/infrastructure/orchestration/: __init__.py  langgraph_orchestrator.py  preambles.py
app/infrastructure/repositories/: sqlalchemy.py
backend/: run_backend.py  run_backend.spec
frontend/: .npmrc  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/baseline/: README.md
frontend/e2e/fixtures/: backend.ts  seed.ts
frontend/e2e/lib/: multipart.ts  sse.ts
frontend/e2e/pages/: BasePage.ts  Dashboard.page.ts
frontend/e2e/tests/: mobile-touch-targets.spec.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/scripts/: capture-mobile-baseline.mjs
frontend/src/: App.svelte  app.css  main.ts  moment-locale.d.ts  test-types.d.ts  vite-env.d.ts
frontend/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/lib/: AvatarUpload.svelte  BackendErrorScreen.svelte  BotCard.svelte  BotsToolbar.svelte  CategoryManager.svelte  CategoryPicker.svelte  ChatHeader.svelte  ChatInput.svelte  DeleteConfirmModal.svelte  EditMessageModal.svelte  FileAttachments.svelte  GlobalDropZone.svelte  LLMDebugModal.svelte  MarkdownRenderer.svelte  MessageBubble.svelte  MessageContextMenu.svelte  MobileBottomNav.svelte  MobileMoreSheet.svelte  OfflineBanner.svelte  PersonaSelectModal.svelte  RecentChats.svelte  Sidebar.svelte  SkillPicker.svelte  SplashScreen.svelte  ThreadDrawer.svelte  ThreadTree.svelte  api.ts  avatar.ts  botEditor.ts  botsBrowse.ts  chatSettings.ts  i18n.ts  theme.ts  time.ts
frontend/src/lib/ui/: Card.svelte  (+28 more)
openspec/: config.yaml
scripts/: build-backend.sh  find_assistant_markers.py  install.sh  make_puro_png.py  print_qr.py  pytest-clean-env.sh  seed_test_thread.py
tests/: conftest.py  test_access_log_middleware.py  test_api.py  test_api_schemas.py  test_app_provider_integration.py  test_app_settings_integration.py  test_application_services.py  test_bootstrap_container_reset.py  test_bot_categories_service.py  test_bot_import_service.py  test_bot_loader.py  test_bot_response_skills.py  test_bot_update.py  test_bot_versioning.py  test_chat_abort.py  test_chat_build_request_skills.py  test_chat_exception_detail.py  test_chat_first_message_substitution.py  test_chat_generation.py  test_chat_summarization_isolated.py  test_chat_usage_sse.py  test_config_embedding.py  test_connect_i18n.py  test_context_compression.py  test_create_thread_persona_substitution.py  test_debug_payload_dump.py  test_domain_constants.py  test_edit_state_integration.py  test_embedding_validation.py  test_embeddings.py  test_export_avatar_path.py  test_file_chunking.py  test_floating_prompt.py  test_fork_thread.py  test_history_limit.py  test_image_utils.py  test_init_db_guard.py  test_knowledge_service.py  test_llm_base_classes.py  test_llm_bootstrap_factory.py  (+50 more)
workflows/: test.yml
(+169 files in other folders)
